FIXED: Some warnings. ADDED: The Constants interface. UPDATED: Removed some constants from UtilsJena.